# puska-farm-websocket

./: .gitignore  Dockerfile  README.md  deploy.sh  pyproject.toml  requirements.txt
src/: main.py
src/helper/: api.py  config.py
src/modules/: __init__.py  bootstrap.py
src/modules/ref/: entity.py  handler.py  repository.py  usecase.py
src/modules/susu/: entity.py  handler.py  repository.py  usecase.py
src/modules/ternak/: entity.py  handler.py  repository.py  usecase.py
test/: test_ws.py
