[project]
name = "puska-farm-websocket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.6.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.7",
    "kink==0.7.0",
    "pydantic==2.7.0",
    "pydantic-core==2.18.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "typing-extensions==4.11.0",
    "urllib3==2.2.1",
    "websockets==12.0",
]
